Change tags and branches output
