# api/api/controllers/projects.js
@@ -32,7 +32,7 @@ function branches (req, res) {
             list.push({name: branches[j]})
           }
           if (list.length > 0) {
-            res.json(list)
+            res.json({branches: list})
           } else {
             res.status(400).json({message: util.format('No branch found for {%s}', pproject)})
           }
@@ -60,22 +60,6 @@ function describe (req, res) {
   }
 }
 
-function events (req, res) {
-  var pproject = req.swagger.params.project.value
-  let event = {}
-  for (var i = 0, size = projects.length; i < size; i++) {
-    if (projects[i].name === pproject) {
-      event = {time: '1970-01-01 00:00:00', description: 'The environment has been registered', reference: util.format('/projects/%s/workspace/staging', pproject)}
-    }
-  }
-
-  if (event.time) {
-    res.json([event])
-  } else {
-    res.status(404).json({message: util.format('Project {%s} not found', pproject)})
-  }
-}
-
 function list (req, res) {
   let output = []
   for (var i = 0, size = projects.length; i < size; i++) {
@@ -96,7 +80,7 @@ function tags (req, res) {
             list.push({name: tags[j]})
           }
           if (list.length > 0) {
-            res.json(list)
+            res.json({tags: list})
           } else {
             res.status(400).json({message: util.format('No tag found for {%s}', pproject)})
           }
@@ -110,7 +94,6 @@ module.exports = {
   project_action: action,
   project_branches: branches,
   project_describe: describe,
-  project_events: events,
   projects_list: list,
   project_tags: tags
 }
